welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: error: illegal start of simple expression
    if(estFaceMur && getDirection()==Direction.EST=){
                                                   ^SnakeBuggle:10: error: ')' expected but '}' found.
  }
  ^